--- a/UIViewAnimation/Base.lproj/Main.storyboard
+++ b/UIViewAnimation/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,71 +13,90 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UIViewAnimation" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xab-6L-UfO">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="clown" translatesAutoresizingMaskIntoConstraints="NO" id="gMg-fe-k6f">
-                                        <rect key="frame" x="110" y="24" width="100" height="100"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wBB-mY-wwP">
-                                        <rect key="frame" x="110" y="302" width="100" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Color Change">
-                                            <color key="baseBackgroundColor" red="0.83610039089143884" green="0.23356197457566369" blue="0.20406266922670052" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        </buttonConfiguration>
-                                        <connections>
-                                            <action selector="colorChangeButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vxu-Ix-Ds4"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7an-sQ-MhS">
-                                        <rect key="frame" x="110" y="226" width="100" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Alpha">
-                                            <color key="baseBackgroundColor" red="0.83610039089143884" green="0.23356197457566369" blue="0.20406266922670052" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        </buttonConfiguration>
-                                        <connections>
-                                            <action selector="alphaButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="clX-7A-pqZ"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PCH-kA-Eao">
-                                        <rect key="frame" x="110" y="264" width="100" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Pulse">
-                                            <color key="baseBackgroundColor" red="0.83610039089143884" green="0.23356197457566369" blue="0.20406266922670052" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        </buttonConfiguration>
-                                        <connections>
-                                            <action selector="pulseButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UHC-0V-PPL"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dHL-ME-eUV">
-                                        <rect key="frame" x="110" y="188" width="100" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Move">
-                                            <color key="baseBackgroundColor" red="0.83610039089143884" green="0.23356197457566369" blue="0.20406266922670052" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        </buttonConfiguration>
-                                        <connections>
-                                            <action selector="moveButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fpu-zs-enJ"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </view>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7an-sQ-MhS">
+                                <rect key="frame" x="157" y="289" width="100" height="30"/>
+                                <color key="backgroundColor" systemColor="systemBrownColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="O3P-Tu-HaN"/>
+                                    <constraint firstAttribute="height" constant="30" id="eic-Ww-Ds9"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Alpha"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Alpha"/>
+                                <connections>
+                                    <action selector="alphaButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="clX-7A-pqZ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PCH-kA-Eao">
+                                <rect key="frame" x="157" y="336" width="100" height="30"/>
+                                <color key="backgroundColor" systemColor="systemBrownColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="01M-7f-kgg"/>
+                                    <constraint firstAttribute="height" constant="30" id="8MV-94-Twd"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Pulse"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Pulse"/>
+                                <connections>
+                                    <action selector="pulseButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UHC-0V-PPL"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dHL-ME-eUV">
+                                <rect key="frame" x="157" y="236" width="100" height="30"/>
+                                <color key="backgroundColor" systemColor="systemBrownColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="3EI-w4-Csd"/>
+                                    <constraint firstAttribute="width" constant="100" id="NLc-QV-uwv"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Move"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Move"/>
+                                <connections>
+                                    <action selector="moveButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fpu-zs-enJ"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clown" translatesAutoresizingMaskIntoConstraints="NO" id="gMg-fe-k6f">
+                                <rect key="frame" x="157" y="92" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="dOh-yq-tNy"/>
+                                    <constraint firstAttribute="height" constant="100" id="svb-WR-9ew"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wBB-mY-wwP">
+                                <rect key="frame" x="157" y="388" width="100" height="30"/>
+                                <color key="backgroundColor" systemColor="systemBrownColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="gtK-4v-HEF"/>
+                                    <constraint firstAttribute="height" constant="30" id="uKZ-hc-b8w"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Color Change"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Color Change"/>
+                                <connections>
+                                    <action selector="colorChangeButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vxu-Ix-Ds4"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="xab-6L-UfO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BDS-a6-Zf9"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xab-6L-UfO" secondAttribute="bottom" id="W7m-9u-wLg"/>
-                            <constraint firstItem="xab-6L-UfO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="jTh-HJ-dRk"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xab-6L-UfO" secondAttribute="trailing" id="quH-sB-Tsr"/>
+                            <constraint firstItem="wBB-mY-wwP" firstAttribute="top" secondItem="PCH-kA-Eao" secondAttribute="bottom" constant="22" id="0dV-qP-Pkj"/>
+                            <constraint firstItem="7an-sQ-MhS" firstAttribute="top" secondItem="dHL-ME-eUV" secondAttribute="bottom" constant="23" id="3DJ-CL-7gb"/>
+                            <constraint firstItem="gMg-fe-k6f" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="48" id="735-y7-vUi"/>
+                            <constraint firstItem="gMg-fe-k6f" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="JZt-0V-klB"/>
+                            <constraint firstItem="PCH-kA-Eao" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="N1a-J9-itT"/>
+                            <constraint firstItem="PCH-kA-Eao" firstAttribute="top" secondItem="7an-sQ-MhS" secondAttribute="bottom" constant="17" id="NdX-uD-Ahp"/>
+                            <constraint firstItem="dHL-ME-eUV" firstAttribute="top" secondItem="gMg-fe-k6f" secondAttribute="bottom" constant="44" id="asb-Np-rth"/>
+                            <constraint firstItem="dHL-ME-eUV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gMt-2T-Lqo"/>
+                            <constraint firstItem="wBB-mY-wwP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rwH-vt-WLz"/>
+                            <constraint firstItem="7an-sQ-MhS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wgb-kf-84n"/>
                         </constraints>
                     </view>
                     <connections>
@@ -97,6 +116,9 @@
         <image name="clown" width="1786" height="1779"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBrownColor">
+            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
